# Workspace.iso

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  packages.workspace  pyrightconfig.json
.github/workflows/: build-iso.yml  qemu-smoke.yml  validate.yml
docs/: ARCHITECTURE.md  THREAT_MODEL.md  VALIDATION_REPORT.md  validation-results.json
profile/: profiledef.sh
profile/airootfs/etc/: motd  workspace-release
profile/airootfs/etc/NetworkManager/conf.d/: 20-workspace.conf
profile/airootfs/etc/lga/: policy.toml
profile/airootfs/etc/profile.d/: workspace-operator.sh
profile/airootfs/etc/sddm.conf.d/: workspace-autologin.conf
profile/airootfs/etc/sudoers.d/: 10-workspace-operator
profile/airootfs/etc/sysctl.d/: 90-workspace-hardening.conf
profile/airootfs/etc/tmpfiles.d/: lga.conf
profile/airootfs/opt/lga/nanolga/: .env.example  .gitignore  README.md  pyproject.toml
profile/airootfs/opt/lga/nanolga/docs/: ARCHITECTURE.md  OPEN_QUESTIONS.md
profile/airootfs/opt/lga/nanolga/src/nanolga/: __init__.py  agps.py  brain.py  cca.py  cli.py  contracts.py  desktop_bridge.py  factory.py  mma.py  providers.py  runtime.py  safety.py
profile/airootfs/opt/lga/nanolga/tests/: test_desktop_bridge.py  test_memory.py  test_runtime.py  test_safety.py
profile/airootfs/root/: customize_airootfs.sh
scripts/: build-in-container.sh  build-iso.sh  clean.sh  prepare-profile.sh  validate.sh  validate_profile.py
tests/: test_egress.py  test_job_runner.py  test_policy.py  test_prepare_profile.py  test_uimp.py
(+22 files in other folders)
