[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nanolga"
version = "0.1.0"
description = "Reference prototype of the NanoLGA modular agent architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nanolga = "nanolga.cli:main"
nanolga-desktop-bridge = "nanolga.desktop_bridge:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
